--- a/06_Paper/ER-ED/ERED_Stage2/method.Rmd
+++ b/06_Paper/ER-ED/ERED_Stage2/method.Rmd
@@ -232,4 +232,8 @@ The data of this study can be downloaded from [osf.io/vnj8x/](https://osf.io/vnj
 
 ## Code availability
 
-The paradigm code, as well as the R Markdown file used to analyze the data and write this document is available at our [Github repository](https://github.com/ChScheffel/CAD).
+The paradigm code, the R script for analysis, and the R Markdown file used to compile this document are available at [osf.io/vnj8x/](https://osf.io/vnj8x/).
+
+## Protocol registration
+
+The Stage 1 Registered Report protocol has been approved and is available at [osf.io/d6sc9/](https://osf.io/d6sc9/).
