--- a/06_Paper/ER-ED/ERED_Stage2/Results.Rmd
+++ b/06_Paper/ER-ED/ERED_Stage2/Results.Rmd
@@ -59,8 +59,8 @@ knitr::include_graphics(here("06_Paper", "ER-ED", "ERED_Stage2", "figures", "Fig
 ```
 
 The cognitive effort expended also played the most important role in the subsequent choice decision, which resembled previous findings of our group[@Scheffel2021]. 
-Here, `r round((54/119)*100, digits = 1)` percent stated that they chose the strategy that was easiest for them to implement.
-`r round((29/119)*100, digits = 1)` percent stated they chose the strategy that was most effective and `r round((14/119)*100, digits = 1)` percent stated their chosen strategy was the easiest and most effective.
+Here, `r round((54/119)*100, digits = 1)`% stated that they chose the strategy that was easiest for them to implement.
+`r round((29/119)*100, digits = 1)`% stated they chose the strategy that was most effective and `r round((14/119)*100, digits = 1)`% stated their chosen strategy was the easiest and most effective.
 A more detailed list of all reasons can be found in table XX in [supplementary material](#SupplementReasonChoice).
 
 #### Subjective values of ER strategies
@@ -72,9 +72,9 @@ Absolute preferences for ER strategies were relatively equally distributed.
 Highest SV for distraction was reported by $n=$ `r  papaja::printnum(sum(data_SV$strat_c[data_SV$strategy == "distraction"] == -1))`, for distancing by $n=$ `r  papaja::printnum(sum(data_SV$strat_c[data_SV$strategy == "distancing"] == -1))`, and for suppression by $n=$ `r papaja::printnum(sum(data_SV$strat_c[data_SV$strategy == "suppression"] == -1))`.
 
 To investigate, which variables can predict individual SVs of ER strategies, a multilevel model approach was chosen.
-The ICC of the null model was $ICC=$ `r papaja::printnum(ICC_between_MLM_0)`, indicating that the level-2 predictor subject accounted for `r papaja::printnum(round(ICC_between_MLM_0*100, digits = 1))` percent of total variance.
+The ICC of the null model was $ICC=$ `r papaja::printnum(ICC_between_MLM_0)`, indicating that the level-2 predictor subject accounted for `r papaja::printnum(round(ICC_between_MLM_0*100, digits = 1))`% of total variance.
 The preregistered model showed a correlation of $r=$ `r papaja::printnum(attr(summary(MLM_1)$varcor[1]$ID,"correlation")[1,2])` of the random effects subjects and recoded strategy ($BF10$ of the variable strategy: `r papaja::apa_print(MLM_1_BF)$statistic`).
-Our model explained `r papaja::printnum(MLM1_r2[2])` percent of variance and thus we assumed our model was overfitted due to including recoded strategy as random slope.
+Our model explained `r papaja::printnum(MLM1_r2[2])`% of variance and thus we assumed our model was overfitted due to including recoded strategy as random slope.
 We therefore set a new model without the recoded strategy as random slope factor to estimate the influence of predictors on SVs more precisely.
 The second model followed the specification: 
 $$
@@ -83,7 +83,7 @@ SV \sim \text{effort rating} + \text{arousal rating} + \text{utility rating} + c
 \end{split}
 $$ 
 
-The second model explained `r papaja::printnum(MLM2_r2[2])` percent of variance. 
+The second model explained `r papaja::printnum(MLM2_r2[2])`% of variance. 
 All results of the second model are in table\ \@ref(tab:TabMLMH5).
 
 [INSERT TABLE 1 HERE]
@@ -99,7 +99,7 @@ papaja::apa_table(
 
 The predictors effort rating (`r papaja::apa_print(MLM_2)$full_result$effort_cwc`), utility rating (`r papaja::apa_print(MLM_2)$full_result$utility_cwc`), and *Corrugator* activity (`r papaja::apa_print(MLM_2)$full_result$Corr_cwc`) showed a significant association with SVs.
 The values were relatively small, so the respective effect size $f^{2}$ was calculated as the explained variance.
-Interestingly, utility rating showed the greatest effect size of all predictors ($f^{2}=$ `r papaja::printnum(H5_M2_table[4,5], digits = 3)`), indicating that utility rating explained `r papaja::printnum(H5_M2_table[4,5]*100, digits = 1)` percent of variance in SVs. 
+Interestingly, utility rating showed the greatest effect size of all predictors ($f^{2}=$ `r papaja::printnum(H5_M2_table[4,5], digits = 3)`), indicating that utility rating explained `r papaja::printnum(H5_M2_table[4,5]*100, digits = 1)`% of variance in SVs. 
 Effort rating showed an effect size of $f^{2}=$ `r papaja::printnum(H5_M2_table[2,5], digits = 3)`.
 The effect sizes of all other predictors were negligibly small ($f^{2}< 0.01$).
 
