--- a/06_Paper/ER-ED/ERED_Stage2/Results.Rmd
+++ b/06_Paper/ER-ED/ERED_Stage2/Results.Rmd
@@ -74,8 +74,8 @@ Highest SV for distraction was reported by $n=$ `r  papaja::printnum(sum(data_SV
 To investigate, which variables can predict individual SVs of ER strategies, a multilevel model approach was chosen.
 The ICC of the null model was $ICC=$ `r papaja::printnum(ICC_between_MLM_0)`, indicating that the level-2 predictor subject accounted for `r papaja::printnum(round(ICC_between_MLM_0*100, digits = 1))`% of total variance.
 The preregistered model showed a correlation of $r=$ `r papaja::printnum(attr(summary(MLM_1)$varcor[1]$ID,"correlation")[1,2])` of the random effects subjects and recoded strategy ($BF10$ of the variable strategy: `r papaja::apa_print(MLM_1_BF)$statistic`).
-Our model explained `r papaja::printnum(MLM1_r2[2])`% of variance and thus we assumed our model was overfitted due to including recoded strategy as random slope.
-We therefore set a new model without the recoded strategy as random slope factor to estimate the influence of predictors on SVs more precisely.
+Our model explained `r papaja::printnum(MLM1_r2[2])`% of variance and thus we assumed our model was overfitted due to including recoded strategy as the random slope.
+We therefore set a new model without the recoded strategy as the random slope factor to estimate the influence of predictors on SVs more precisely.
 The second model followed the specification: 
 $$
 \begin{split}
