--- a/06_Paper/ER-ED/ERED_Stage2/Results.Rmd
+++ b/06_Paper/ER-ED/ERED_Stage2/Results.Rmd
@@ -61,7 +61,7 @@ knitr::include_graphics(here("06_Paper", "ER-ED", "ERED_Stage2", "figures", "Fig
 The cognitive effort expended also played the most important role in the subsequent choice decision, which resembled previous findings of our group[@Scheffel2021]. 
 Here, `r round((54/119)*100, digits = 1)`% stated that they chose the strategy that was easiest for them to implement.
 `r round((29/119)*100, digits = 1)`% stated they chose the strategy that was most effective and `r round((14/119)*100, digits = 1)`% stated their chosen strategy was the easiest and most effective.
-A more detailed list of all reasons can be found in table XX in [supplementary material](#SupplementReasonChoice).
+A more detailed list of all reasons can be found in Table XX in [supplementary material](#SupplementReasonChoice).
 
 #### Subjective values of ER strategies
 
@@ -84,7 +84,7 @@ SV \sim \text{effort rating} + \text{arousal rating} + \text{utility rating} + c
 $$ 
 
 The second model explained `r papaja::printnum(MLM2_r2[2])`% of variance. 
-All results of the second model are in table\ \@ref(tab:TabMLMH5).
+All results of the second model are in Table\ \@ref(tab:TabMLMH5).
 
 [INSERT TABLE 1 HERE]
 
